# s3ls-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
docs/superpowers/plans/: 2026-04-04-multi-column-sort.md  2026-04-04-step1-argument-design.md  2026-04-04-step2-empty-pipeline.md  2026-04-04-step3-listing-stage.md  2026-04-04-step4-filtering-stage.md  2026-04-04-step5-aggregate-stage.md  2026-04-04-step6-e2e-tests.md  2026-04-05-max-depth.md  2026-04-11-bucket-listing-e2e-tests.md  2026-04-11-display-e2e-tests.md  2026-04-11-large-listing-e2e-tests.md  2026-04-11-sort-e2e-tests.md  2026-04-11-step6-e2e-framework.md  2026-04-11-step7-filter-e2e-tests.md  2026-04-11-versioned-filter-e2e-tests.md  2026-04-13-entry-formatter-polymorphism.md  2026-04-13-extract-formatter-from-aggregator.md  2026-04-19-aligned-option.md
docs/superpowers/specs/: 2026-04-04-multi-column-sort-design.md  2026-04-04-s3ls-rs-design.md  2026-04-05-group-by-prefix-design.md  2026-04-05-max-depth-design.md  2026-04-11-bucket-listing-e2e-tests-design.md  2026-04-11-display-e2e-tests-design.md  2026-04-11-large-listing-e2e-tests-design.md  2026-04-11-sort-e2e-tests-design.md  2026-04-11-step6-e2e-framework-design.md  2026-04-11-step7-filter-e2e-tests-design.md  2026-04-11-versioned-filter-e2e-tests-design.md  2026-04-19-aligned-option-design.md
proptest-regressions/config/args/: tests.txt
src/: aggregate.rs  bucket_lister.rs  display_writer.rs  formatter.rs  lib.rs  lister.rs  pipeline.rs
src/config/: mod.rs
src/config/args/: mod.rs  tests.rs
src/config/args/value_parser/: human_bytes.rs  mod.rs  regex.rs  storage_class.rs  url.rs
src/display/: aligned.rs  aligned_formatter.rs  columns.rs  json.rs  mod.rs  one_line_formatter.rs  tsv.rs
src/filters/: exclude_regex.rs  include_regex.rs  larger_size.rs  mod.rs  mtime_after.rs  mtime_before.rs  smaller_size.rs  storage_class.rs
src/storage/: mod.rs
src/storage/s3/: client_builder.rs  mod.rs
src/types/: error.rs  mod.rs  token.rs
tests/: README.md  e2e_bucket_listing.rs  e2e_display.rs  e2e_edge_cases.rs  e2e_filters.rs  e2e_filters_versioned.rs  e2e_large_listing.rs  e2e_listing.rs  e2e_sort.rs
tests/common/: mod.rs
