[package]
name = "s3ls-rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Ultra-fast S3 object listing tool"
repository = "https://github.com/nidor1998/s3ls-rs"

[dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"
clap = { version = "4.6.0", features = ["derive", "env", "cargo", "string"] }
clap_complete = "4.6.0"
clap-verbosity-flag = "3.0.4"
chrono = "0.4.44"
fancy-regex = "0.17.0"
byte-unit = "5.2.0"
url = "2.5.8"

# Async runtime
async-trait = "0.1.89"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"

# AWS SDK
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-runtime = "1.7.2"
aws-sdk-s3 = "1.127.0"
aws-smithy-runtime-api = "1.11.6"
aws-smithy-types = "1.4.7"
aws-types = "1.3.14"

# Security
zeroize = "1.8.2"
zeroize_derive = "1.4.3"

# Logging
log = "0.4.29"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "local-time"] }

[dev-dependencies]
proptest = "1.11"
once_cell = "1.21.4"
nix = { version = "0.31.2", features = ["process", "signal"] }
rusty-fork = "0.3.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(e2e_test)'] }
