[package]
name = "s3ls-rs"
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
description = "Fast S3 object listing tool"
repository = "https://github.com/nidor1998/s3ls-rs"

[dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive", "env", "cargo", "string"] }
clap_complete = "4.6.2"
clap-verbosity-flag = "3.0.4"
chrono = "0.4.44"
fancy-regex = "0.18.0"
byte-unit = "5.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5.8"
rayon = "1.12"

# Async runtime
async-trait = "0.1.89"
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = "0.7.18"

# AWS SDK
# Disable default features on aws-config and aws-sdk-s3 to drop the legacy
# `rustls` alias that pulls rustls 0.21 (vulnerable rustls-webpki 0.101.x,
# RUSTSEC-2026-0098). The modern `default-https-client` feature, which uses
# rustls 0.23 via `aws-smithy-http-client`, is re-enabled explicitly.
aws-config = { version = "1.8.16", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio", "credentials-process", "sso"] }
aws-runtime = "1.7.3"
aws-sdk-s3 = { version = "1.131.0", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
aws-smithy-runtime-api = "1.12.0"
aws-smithy-types = "1.4.7"
aws-types = "1.3.15"

# Security
zeroize = "1.8.2"
zeroize_derive = "1.4.3"

# Logging
log = "0.4.29"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "local-time"] }

# Build info (git commit, rustc version, target triple) — captured at
# build time and shown in the --version output.
shadow-rs = { version = "2.0.0", optional = true }
leaky-bucket = "1.1.2"

[build-dependencies]
shadow-rs = { version = "2.0.0", optional = true }

[features]
default = ["version"]
version = ["dep:shadow-rs"]

[dev-dependencies]
proptest = "1.11"
once_cell = "1.21.4"
nix = { version = "0.31.2", features = ["process", "signal"] }
rusty-fork = "0.3.1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
debug = 1
panic = "abort"
opt-level = 3
strip = "symbols"
lto = "fat"
codegen-units = 1

[profile.release-min-size]
inherits = "release"
debug = 0
panic = "abort"
opt-level = "z"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(e2e_test)'] }
